--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node --project tsconfig.server.json server.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,11 +12,20 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "echarts": "^4.9.0",
     "eslint": "8.8.0",
     "eslint-config-next": "13.0.5",
+    "express": "^4.17.2",
+    "http-proxy-middleware": "1.0.6",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.5.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.2.4",
+    "@types/express": "^4.17.9"
   }
 }
